--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -1,3 +1,9 @@
+html {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+	overflow-x: hidden;
+}
 body {
 	background-color: whitesmoke;
 	font-family: 'Courier New', Courier, monospace;
